--- a/styles.css
+++ b/styles.css
@@ -23,3 +23,9 @@ body{
 .contact{
     background-color:lightgray;
 }
+
+#container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
